# shell-gen

./: .gitignore  README.md  key  shell-gen.cabal  system_message
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: package.cache  shell-gen-0.1.0.0-inplace-sg-lib.conf
dist-newstyle/packagedb/ghc-9.6.2/: package.cache  shell-gen-0.1.0.0-inplace-sg-lib.conf
sg/: Main.hs
sg-lib/: SG.hs
sg-lib/SG/: LensRules.hs  Message.hs  Request.hs  Response.hs  Role.hs
sg-test/: Spec.hs
